--- a/style.css
+++ b/style.css
@@ -82,3 +82,12 @@ body {
   color: var(--verde);
   text-transform: uppercase;
 }
+.aba-conteudo-titulo-principal {
+  font-size: 28px;
+  text-align: center;
+}
+.aba-conteudo-titulo-secundario {
+  text-align: center;
+  color: var(--verde);
+  text-transform: uppercase;
+}
